# ObscuraRT

./: .clangd  .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  README.md  ROADMAP.md  setup.sh
include/: compute_pipeline.h  display_pipeline.h  frame_grabber.h  vulkan_context.h
shaders/: display.frag  display.vert  pixelation.comp
src/: compute_pipeline.cpp  display_pipeline.cpp  frame_grabber.cpp  main.cpp  vulkan_context.cpp
